--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,7 +7,8 @@
 @import "variables";
 
 // Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+//@import url("https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/flatly/bootstrap.min.css");
 
 // Flatly 3.3.7
 // Bootswatch
@@ -16,326 +17,334 @@
 $web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic" !default;
 @import url($web-font-path);
 
-// Navbar =====================================================================
-
-.navbar {
-  border-width: 0;
-
-  &-default {
-
-    .badge {
-      background-color: #fff;
-      color: $navbar-default-bg;
-    }
-  }
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: $navbar-inverse-bg;
-    }
-  }
-
-  &-brand {
-    line-height: 1;
-  }
+.active {
+  color: white !important;
+  font-weight: bold;
 }
 
-// Buttons ====================================================================
-
-.btn {
-  border-width: 2px;
+#footer {
+	top:300px;
 }
+// // Navbar =====================================================================
 
-.btn:active {
-  @include box-shadow(none);
-}
+// .navbar {
+//   border-width: 0;
 
-.btn-group.open .dropdown-toggle {
-  @include box-shadow(none);
-}
+//   &-default {
 
-// Typography =================================================================
+//     .badge {
+//       background-color: #fff;
+//       color: $navbar-default-bg;
+//     }
+//   }
 
-.text-primary,
-.text-primary:hover {
-  color: $brand-primary;
-}
+//   &-inverse {
 
-.text-success,
-.text-success:hover {
-  color: $brand-success;
-}
+//     .badge {
+//       background-color: #fff;
+//       color: $navbar-inverse-bg;
+//     }
+//   }
 
-.text-danger,
-.text-danger:hover {
-  color: $brand-danger;
-}
+//   &-brand {
+//     line-height: 1;
+//   }
+// }
 
-.text-warning,
-.text-warning:hover {
-  color: $brand-warning;
-}
+// // Buttons ====================================================================
 
-.text-info,
-.text-info:hover {
-  color: $brand-info;
-}
+// .btn {
+//   border-width: 2px;
+// }
 
-// Tables =====================================================================
+// .btn:active {
+//   //@include box-shadow(none);
+// }
 
-table,
-.table {
+// .btn-group.open .dropdown-toggle {
+//   //@include box-shadow(none);
+// }
 
-  a:not(.btn) {
-    text-decoration: underline;
-  }
+// // Typography =================================================================
 
-  .dropdown-menu a {
-    text-decoration: none;
-  }
+// .text-primary,
+// .text-primary:hover {
+//   color: $brand-primary;
+// }
 
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
+// .text-success,
+// .text-success:hover {
+//   color: $brand-success;
+// }
 
-    > th > a,
-    > td > a,
-    > a {
-      color: #fff;
-    }
-  }
+// .text-danger,
+// .text-danger:hover {
+//   color: $brand-danger;
+// }
 
-  > thead > tr > th,
-  > tbody > tr > th,
-  > tfoot > tr > th,
-  > thead > tr > td,
-  > tbody > tr > td,
-  > tfoot > tr > td {
-    border: none;
-  }
+// .text-warning,
+// .text-warning:hover {
+//   color: $brand-warning;
+// }
 
-  &-bordered > thead > tr > th,
-  &-bordered > tbody > tr > th,
-  &-bordered > tfoot > tr > th,
-  &-bordered > thead > tr > td,
-  &-bordered > tbody > tr > td,
-  &-bordered > tfoot > tr > td {
-    border: 1px solid $table-border-color;
-  }
-}
+// .text-info,
+// .text-info:hover {
+//   color: $brand-info;
+// }
 
-// Forms ======================================================================
+// // Tables =====================================================================
 
-.form-control,
-input {
-  border-width: 2px;
-  @include box-shadow(none);
+// table,
+// .table {
 
-  &:focus {
-    @include box-shadow(none);
-  }
-}
+//   a:not(.btn) {
+//     text-decoration: underline;
+//   }
 
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: $brand-warning;
-  }
+//   .dropdown-menu a {
+//     text-decoration: none;
+//   }
 
-  .form-control,
-  .form-control:focus {
-    border: 2px solid $brand-warning;
-  }
+//   .success,
+//   .warning,
+//   .danger,
+//   .info {
+//     color: #fff;
 
-  .input-group-addon {
-    border-color: $brand-warning;
-  }
-}
+//     > th > a,
+//     > td > a,
+//     > a {
+//       color: #fff;
+//     }
+//   }
 
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: $brand-danger;
-  }
+//   > thead > tr > th,
+//   > tbody > tr > th,
+//   > tfoot > tr > th,
+//   > thead > tr > td,
+//   > tbody > tr > td,
+//   > tfoot > tr > td {
+//     border: none;
+//   }
 
-  .form-control,
-  .form-control:focus {
-    border: 2px solid $brand-danger;
-  }
+//   &-bordered > thead > tr > th,
+//   &-bordered > tbody > tr > th,
+//   &-bordered > tfoot > tr > th,
+//   &-bordered > thead > tr > td,
+//   &-bordered > tbody > tr > td,
+//   &-bordered > tfoot > tr > td {
+//     border: 1px solid $table-border-color;
+//   }
+// }
 
-  .input-group-addon {
-    border-color: $brand-danger;
-  }
-}
+// // Forms ======================================================================
 
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: $brand-success;
-  }
+// .form-control,
+// input {
+//   border-width: 2px;
+//   //@include box-shadow(none);
 
-  .form-control,
-  .form-control:focus {
-    border: 2px solid $brand-success;
-  }
+//   &:focus {
+//     //@include box-shadow(none);
+//   }
+// }
 
-  .input-group-addon {
-    border-color: $brand-success;
-  }
-}
+// .has-warning {
+//   .help-block,
+//   .control-label,
+//   .radio,
+//   .checkbox,
+//   .radio-inline,
+//   .checkbox-inline,
+//   &.radio label,
+//   &.checkbox label,
+//   &.radio-inline label,
+//   &.checkbox-inline label,
+//   .form-control-feedback {
+//     color: $brand-warning;
+//   }
 
-// Navs =======================================================================
+//   .form-control,
+//   .form-control:focus {
+//     border: 2px solid $brand-warning;
+//   }
 
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
+//   .input-group-addon {
+//     border-color: $brand-warning;
+//   }
+// }
 
-.pager {
-  a,
-  a:hover {
-    color: #fff;
-  }
+// .has-error {
+//   .help-block,
+//   .control-label,
+//   .radio,
+//   .checkbox,
+//   .radio-inline,
+//   .checkbox-inline,
+//   &.radio label,
+//   &.checkbox label,
+//   &.radio-inline label,
+//   &.checkbox-inline label,
+//   .form-control-feedback {
+//     color: $brand-danger;
+//   }
 
-  .disabled {
-    &>a,
-    &>a:hover,
-    &>a:focus,
-    &>span {
-      background-color: $pagination-disabled-bg;
-    }
-  }
-}
+//   .form-control,
+//   .form-control:focus {
+//     border: 2px solid $brand-danger;
+//   }
 
-// Indicators =================================================================
+//   .input-group-addon {
+//     border-color: $brand-danger;
+//   }
+// }
 
-.close {
-  color: #fff;
-  text-decoration: none;
-  opacity: 0.4;
+// .has-success {
+//   .help-block,
+//   .control-label,
+//   .radio,
+//   .checkbox,
+//   .radio-inline,
+//   .checkbox-inline,
+//   &.radio label,
+//   &.checkbox label,
+//   &.radio-inline label,
+//   &.checkbox-inline label,
+//   .form-control-feedback {
+//     color: $brand-success;
+//   }
 
-  &:hover,
-  &:focus {
-    color: #fff;
-    opacity: 1;
-  }
-}
+//   .form-control,
+//   .form-control:focus {
+//     border: 2px solid $brand-success;
+//   }
 
-.alert {
+//   .input-group-addon {
+//     border-color: $brand-success;
+//   }
+// }
 
-  .alert-link {
-    color: #fff;
-    text-decoration: underline;
-  }
-}
+// // Navs =======================================================================
 
-// Progress bars ==============================================================
+// .nav {
+//   .open > a,
+//   .open > a:hover,
+//   .open > a:focus {
+//     border-color: transparent;
+//   }
+// }
 
-.progress {
-  height: 10px;
-  @include box-shadow(none);
-  .progress-bar {
-    font-size: 10px;
-    line-height: 10px;
-  }
-}
+// .pager {
+//   a,
+//   a:hover {
+//     color: #fff;
+//   }
 
-// Containers =================================================================
+//   .disabled {
+//     &>a,
+//     &>a:hover,
+//     &>a:focus,
+//     &>span {
+//       background-color: $pagination-disabled-bg;
+//     }
+//   }
+// }
 
-.well {
-  @include box-shadow(none);
-}
+// // Indicators =================================================================
 
-a.list-group-item {
+// .close {
+//   color: #fff;
+//   text-decoration: none;
+//   opacity: 0.4;
 
-  &.active,
-  &.active:hover,
-  &.active:focus {
-    border-color: $list-group-border;
-  }
+//   &:hover,
+//   &:focus {
+//     color: #fff;
+//     opacity: 1;
+//   }
+// }
 
-  &-success {
-    &.active {
-      background-color: $state-success-bg;
-    }
+// .alert {
 
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-success-bg, 5%);
-    }
-  }
+//   .alert-link {
+//     color: #fff;
+//     text-decoration: underline;
+//   }
+// }
 
-  &-warning {
-    &.active {
-      background-color: $state-warning-bg;
-    }
+// // Progress bars ==============================================================
+
+// .progress {
+//   height: 10px;
+//   //@include box-shadow(none);
+//   .progress-bar {
+//     font-size: 10px;
+//     line-height: 10px;
+//   }
+// }
+
+// // Containers =================================================================
+
+// .well {
+//   //@include box-shadow(none);
+// }
+
+// a.list-group-item {
+
+//   &.active,
+//   &.active:hover,
+//   &.active:focus {
+//     border-color: $list-group-border;
+//   }
+
+//   &-success {
+//     &.active {
+//       background-color: $state-success-bg;
+//     }
+
+//     &.active:hover,
+//     &.active:focus {
+//       background-color: darken($state-success-bg, 5%);
+//     }
+//   }
+
+//   &-warning {
+//     &.active {
+//       background-color: $state-warning-bg;
+//     }
     
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-warning-bg, 5%);
-    }
-  }
+//     &.active:hover,
+//     &.active:focus {
+//       background-color: darken($state-warning-bg, 5%);
+//     }
+//   }
 
-  &-danger {
-    &.active {
-      background-color: $state-danger-bg;
-    }
+//   &-danger {
+//     &.active {
+//       background-color: $state-danger-bg;
+//     }
     
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-danger-bg, 5%);
-    }
-  }
-}
+//     &.active:hover,
+//     &.active:focus {
+//       background-color: darken($state-danger-bg, 5%);
+//     }
+//   }
+// }
 
-.panel {
-  &-default {
-    .close {
-      color: $text-color;
-    }
-  }
-}
+// .panel {
+//   &-default {
+//     .close {
+//       color: $text-color;
+//     }
+//   }
+// }
 
-.modal {
-  .close {
-    color: $text-color;
-  }
-}
+// .modal {
+//   .close {
+//     color: $text-color;
+//   }
+// }
 
-.popover {
-  color: $text-color;
-}
+// .popover {
+//   color: $text-color;
+// }
